2007-11-28  Mark Ellis  <mark@mpellis.org.uk>

	* pls.c and pcp.1 patch from Debian package

2007-09-18  Mark Ellis  <mark@mpellis.org.uk>

	* started Changelog !
	* changed rapi_connection_from_path to rapi_connection_from_name
