@@ -158,5 +158,22 @@ bool rapi_buffer_read_find_data(
         RapiBuffer* buffer,
         LPCE_FIND_DATA lpFindFileData);
 
+
+/**
+ * Dump the complete buffer that is supplied as parameter
+ */
+void rapi_buffer_dump_buffer(
+		char* desc, 
+		RapiBuffer* buffer) ;
+
+/**
+ * Dump the remainder of the buffer that is supplied as 
+ * a parameter. Mostly of use when dumping the recv buffer
+ */
+void rapi_buffer_dump_buffer_from_current_point(
+		char* desc, 
+		RapiBuffer* buffer) ;
+
+
 #endif
 
